added animation text-main

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,8 @@ header li{
 .text-main {
     display: flex;
     justify-content: center;
+    animation-name: text-main;
+    animation-duration: 1s;
 }
 
 .text-main img {
