--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,36 @@ header li{
     width: 99%;
     height: 50px;
 }
+
+.content {
+    margin-top: 30px;
+    margin-left: 30px;
+}
+.text-content {
+    animation-name:text-content-animation;
+    animation-duration: 1.5s;
+}
+
+.save-btn {
+    border: 0.1px solid black;
+    background-color:rgb(62, 62, 62); 
+    color: white;
+    width: 100px;
+    height: 50px;
+    border-radius: 20px;
+    
+}
+
+.div-btn {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.save-btn:hover {
+    background-color: rgb(214, 214, 214);
+    color: black;
+}
+.spisok {
+    margin-left: 30px;
+}
